--- a/simple_linear_regression_on_salary_data.ipynb
+++ b/simple_linear_regression_on_salary_data.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "simple_linear_regression_on_salary_data.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -12,6 +13,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/forouzanfallah/Simple-Regression-using-Python-on-Colab/blob/main/simple_linear_regression_on_salary_data.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -27,7 +38,7 @@
         "id": "6vkIainRsAxF"
       },
       "source": [
-        "Github: Forouzanfallah1\n",
+        "Github: Forouzanfallah\n",
         "\n",
         "Personal Website: Forouzanfallah.ir\n",
         "\n",
@@ -62,7 +73,7 @@
         "import matplotlib.pyplot as plt\n",
         "import pandas as pd"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -82,7 +93,7 @@
       "source": [
         "dataset = pd.read_csv('Salary_Data.csv')\n"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -103,7 +114,7 @@
         "X = dataset.iloc[:, :-1].values\n",
         "y = dataset.iloc[:, -1].values"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -124,7 +135,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.3, random_state = 0)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -150,7 +161,7 @@
         "linear_regressor = LinearRegression()\n",
         "linear_regressor.fit(X_train, y_train)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -183,7 +194,7 @@
       "source": [
         "y_predict = linear_regressor.predict(X_test)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -213,7 +224,7 @@
         "plt.xlabel('Years of Experience')\n",
         "plt.show()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -257,7 +268,7 @@
         "plt.xlabel('Years of Experience')\n",
         "plt.show()"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
